.item spacing fixes and slider display fixes

--- a/public/ng/app/scss/modules/_overrides.scss
+++ b/public/ng/app/scss/modules/_overrides.scss
@@ -10,7 +10,7 @@ ion-nav-bar.bar.bar-royal, .nav-title-slide-ios7, .bar .bar-header .nav-bar {
 
 .item {
   height:         47px;
-  padding-top:    13px;
+  padding-top:    13px !important;
 }
 
 // FORM/INPUT OVERRIDES
