--- a/public/ng/app/scss/partials/_slider.scss
+++ b/public/ng/app/scss/partials/_slider.scss
@@ -107,6 +107,7 @@ $thumb-height: 30px;
   }
 
   .range-container {
+    padding-bottom: 10px;
 
     .upper {
       margin-top: 15px;
